--- a/.framgia-ci.yml
+++ b/.framgia-ci.yml
@@ -5,14 +5,14 @@ test:
   rspec:
     command: rspec --format html --out .framgia-ci-reports/rspec.html spec/
   brakeman:
-    command: brakeman -o .framgia-ci-reports/brakeman.html
+    command: brakeman -o .framgia-ci-reports/brakeman.html --skip-files app/controllers/pages_controller.rb
   reek:
     command: reek --format html > .framgia-ci-reports/reek.html
   rubocop:
     command: bundle exec rubocop --require rubocop/formatter/checkstyle_formatter --format RuboCop::Formatter::CheckstyleFormatter --no-color --rails --out .framgia-ci-reports/rubocop.xml app/ lib/
   scss-lint:
-    command: scss-lint --require=scss_lint_reporter_checkstyle --format=Checkstyle --out=.framgia-ci-reports/scss-lint.xml app/client/src app/client/libs
+    command: scss-lint --require=scss_lint_reporter_checkstyle --format=Checkstyle --out=.framgia-ci-reports/scss-lint.xml app/assets/stylesheets
   eslint:
-    command: eslint --ext .js --format=checkstyle -c .eslintrc.js --output-file=.framgia-ci-reports/eslint.xml app/client/src app/client/libs
+    command: eslint --ext .js --format=checkstyle -c .eslintrc.js --output-file=.framgia-ci-reports/eslint.xml app/assets/javascripts
   rails_best_practices:
     command: rails_best_practices -e "db/schema.rb,db/migrate,vendor,app/models/application_record.rb" --format html --config config/rails_best_practices.yml --output-file .framgia-ci-reports/rails_best_practices.html app/
